# OpenGL_Labs

Lab1_Patterns/: CMakeLists.txt  circular.fs  main.cpp  vertex.vs  wavy.fs
Lab1_Patterns/Solutions/: LoadShader.cpp
Lab2_Surface_with_lighting/: CMakeLists.txt  main.cpp  vertex_shader.glsl
Lab3_Textures/: CMakeLists.txt  fragment_shader.glsl  main.cpp  vertex_shader.glsl
Lab3_Textures/Solutions/: LoadShader.cpp  LoadShader.h
Lab4_Body_of_revolution/: CMakeLists.txt  fragment_shader.glsl  main1.cpp
Lab4_Body_of_revolution/Solutions/: LoadShader.cpp  LoadShader.h
Lab4_Body_of_revolution/include/: Camera.h  Curve.h  PointSet.h  RevolutionSurface.h  Shader.h
Lab4_Body_of_revolution/shaders/: curve.frag  point.frag  point.vert  surface.frag  surface.vert
Lab4_Body_of_revolution/src/: Camera.cpp  Curve.cpp  PointSet.cpp  RevolutionSurface.cpp  Shader.cpp  main.cpp
